# ESP32_FlowerHumidityMonitor

./: .gitignore  CMakeLists.txt  partitions_example.csv  sdkconfig
front/web-demo/: package.json
front/web-demo/public/: index.html
main/: CMakeLists.txt  Kconfig.projbuild  duckdns-org.pem  esp_rest_main.c  html_handling.c  html_handling.h  ipify-org.pem  rest_server.c  rtc_handling.c  rtc_handling.h  spiffs_module.c  spiffs_module.h  wifi_module.c  wifi_module.h
